# locus-tag

./: .gitignore  CHANGELOG.md
crates/locus-core/: Cargo.toml  build.rs
crates/locus-core/data/dictionaries/: dict_4x4_1000.json  dict_4x4_250.json
crates/locus-core/profiles/: high_accuracy.json
crates/locus-core/src/: config.rs  decoder.rs  dictionaries.rs
crates/locus-core/tests/: profile_loading.rs
examples/dictionary_generation/: extract_opencv.py
